<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.pu.demo.ui.login.launch.LaunchScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.launch.LaunchScreenActivity">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="160dp"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/textLevel1"
            />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/launch_screen_sub_title"
            android:textSize="14sp"
            android:textColor="@color/textLevel2"
            />

        <LinearLayout
            android:clickable="true"
            android:id="@+id/nextBtnLayout"
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/rectangle_radius_8"
            android:layout_marginBottom="80dp"
            android:backgroundTint="@color/lightBlueLevel1"
            android:gravity="center"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launch_screen_start_next"
                android:textSize="16sp"
                android:textColor="@color/white_level_1"
                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>