<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.pu.demo.ui.login.phone.LoginPhoneViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.login.phone.LoginPhoneActivity">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="160dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/textLevel1"
            android:text="@string/login_phone_title"
            />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/textLevel2"
            android:text="@string/login_phone_sub_title"
            />


        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:paddingHorizontal="14dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:maxLength="13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/login_phone_phone_number_hint"
            app:layout_constraintTop_toBottomOf="@+id/sub_title"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/rectangle_edit_text"
            />

        <ScrollView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/nextBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:backgroundTint="@color/lightBlueLevel1"
                android:background="@drawable/circle_50">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>